force-app/main/default/objects/Change_Request__c/Change_Request__c.object-meta.xml
<CustomObject>
    <description>Linked to Orders, requests for various changes made to an order by Finance or other departments</description>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CO-{MM}{DD}{YYYY}{0000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>