force-app/main/default/objects/Change_Request__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>