force-app/main/default/objects/Change_Request__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <inlineHelpText>Only Visible to Finance/Admin - internal comments about this change request</inlineHelpText>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>