force-app/main/default/objects/Change_Request__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <label>Open Date</label>
    <type>DateTime</type>
</CustomField>