force-app/main/default/objects/Change_Request__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Order this Change Request is For</inlineHelpText>
    <label>Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>