force-app/main/default/objects/Change_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <inlineHelpText>Type of Change Request</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Cancel-Subscription</fullName>
            </value>
            <value>
                <fullName>Cancel-Full</fullName>
            </value>
            <value>
                <fullName>Cancel-Partial</fullName>
            </value>
            <value>
                <fullName>Cancel-20% Non-refundable</fullName>
            </value>
            <value>
                <fullName>Cancel-Fulfillment only</fullName>
            </value>
            <value>
                <fullName>Product(s)-Add</fullName>
            </value>
            <value>
                <fullName>Product(s)-Replacement</fullName>
            </value>
            <value>
                <fullName>Apply Credit from Cancelled Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>FINANCE</fullName>
                <label>FINANCE ONLY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>