force-app/main/default/objects/Change_Request__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boom Order Number</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>