force-app/main/default/objects/Change_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Declined Credit Card</fullName>
            </value>
            <value>
                <fullName>Waiting on Information</fullName>
            </value>
            <value>
                <fullName>Date Driven:</fullName>
            </value>
            <value>
                <fullName>Waiting on Check</fullName>
            </value>
            <value>
                <fullName>MX Merchant Refund</fullName>
            </value>
            <value>
                <fullName>Subscription Management</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <color>#990000</color>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>DECLINE: PAYMENT PLAN</fullName>
                <color>#DDDDDD</color>
                <label>DECLINE: PAYMENT PLAN</label>
            </value>
            <value>
                <fullName>COLLECTIONS-1ST NOTICE</fullName>
                <color>#BBBBBB</color>
                <label>COLLECTIONS-1ST NOTICE</label>
            </value>
            <value>
                <fullName>COLLECTIONS-2ND NOTICE</fullName>
                <color>#999999</color>
                <label>COLLECTIONS-2ND NOTICE</label>
            </value>
            <value>
                <fullName>COLLECTIONS-FINAL NOTICE</fullName>
                <color>#666666</color>
                <label>COLLECTIONS-FINAL NOTICE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>