force-app/main/default/objects/Change_Request__c/fields/Time_Open__c.field-meta.xml
<CustomField>
    <fullName>Time_Open__c</fullName>
    <formula>DATEVALUE(Open_Date__c) - DATEVALUE(Close_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>