force-app/main/default/objects/Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Open_Date__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>notEqual</operation>
        <value>Complaint</value>
    </filters>
    <label>Change Requests-open</label>
    <language>en_US</language>
</ListView>