force-app/main/default/objects/Change_Request__c/listViews/Change_Requests_FINANCE_ONLY.listView-meta.xml
<ListView>
    <fullName>Change_Requests_FINANCE_ONLY</fullName>
    <columns>Open_Date__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>FINANCE</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Change Requests-FINANCE ONLY</label>
</ListView>